--- a/package.json
+++ b/package.json
@@ -9,18 +9,113 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "@clerk/nextjs": "^5.1.4",
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@headlessui/react": "^2.0.4",
+    "@heroicons/react": "^2.1.3",
+    "@hookform/resolvers": "^3.6.0",
+    "@prisma/client": "5.15.0",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-hook/media-query": "^1.1.1",
+    "@react-hook/window-size": "^3.1.1",
+    "@stripe/connect-js": "^3.3.6",
+    "@stripe/react-connect-js": "^3.3.8",
+    "@stripe/stripe-js": "^2.4.0",
+    "@supabase/supabase-js": "^2.43.4",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tanstack/react-query": "^5.32.0",
+    "@tanstack/react-table": "^8.15.0",
+    "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "country-region-data": "^3.0.0",
+    "country-state-city": "^3.2.1",
+    "date-fns": "^3.6.0",
+    "delay": "^6.0.0",
+    "embla-carousel": "^8.1.3",
+    "embla-carousel-autoplay": "^8.1.3",
+    "embla-carousel-react": "^8.1.3",
+    "framer-motion": "^11.2.11",
+    "install": "^0.13.0",
+    "ioredis": "^5.4.1",
+    "jotai": "^2.8.4",
+    "jsonwebtoken": "^9.0.2",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.395.0",
+    "next": "14.2.3",
+    "next-themes": "^0.3.0",
+    "npm": "^10.8.1",
+    "react": "^18.3.1",
+    "react-date-range": "^2.0.1",
+    "react-datepicker": "^6.9.0",
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.51.5",
+    "react-icons": "^5.2.1",
+    "react-image-gallery": "^1.3.0",
+    "react-intersection-observer": "^9.5.3",
+    "react-leaflet": "^4.2.1",
+    "react-loader-spinner": "^6.1.6",
+    "react-multi-date-picker": "^4.5.2",
+    "react-range-slider-input": "^3.0.7",
+    "react-resizable-panels": "^2.0.20",
+    "react-responsive-carousel": "^3.2.23",
+    "react-select": "^5.8.0",
+    "react-select-country-list": "^2.2.3",
+    "react-share": "^5.1.0",
+    "react-slider": "^2.0.6",
+    "react-toastify": "^10.0.5",
+    "recharts": "^2.12.7",
+    "socket.io-client": "^4.7.5",
+    "stripe": "^15.12.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.1",
+    "uuid": "^10.0.0",
+    "world-countries": "^5.0.0",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-date-range": "^1.4.9",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@types/react-image-gallery": "^1.2.4",
+    "@types/react-slider": "^1.3.6",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "prisma": "5.15.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
