--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.3",
+    "cities.json": "^1.1.38",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "country-region-data": "^3.0.0",
@@ -80,6 +81,7 @@
     "react-leaflet": "^4.2.1",
     "react-loader-spinner": "^6.1.6",
     "react-multi-date-picker": "^4.5.2",
+    "react-quill": "^2.0.0",
     "react-range-slider-input": "^3.0.7",
     "react-resizable-panels": "^2.0.20",
     "react-responsive-carousel": "^3.2.23",
